--- a/Fixbuddy.html
+++ b/Fixbuddy.html
@@ -179,18 +179,7 @@
 
     <footer class="footer">
         <div class="footer-content">
-            <p> 2024 FixBuddy - Your DIY Home Repair Guide</p>
-            <div class="social-links">
-                <a href="#" class="social-link" aria-label="Share on Facebook">
-                    <i class="fab fa-facebook"></i>
-                </a>
-                <a href="#" class="social-link" aria-label="Share on Twitter">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="#" class="social-link" aria-label="Share on Pinterest">
-                    <i class="fab fa-pinterest"></i>
-                </a>
-            </div>
+            <p>&copy; 2024 FixBuddy - Your DIY Home Repair Guide</p>
             <a href="#" class="btn">Back to Top</a>
         </div>
     </footer>
