--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FixBuddy - Your DIY Home Repair Guide</title>
+    <link rel="icon" type="image/svg+xml" href="images/logo/favicon.svg">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header class="header">
         <div class="header-content">
+            <div class="logo">
+                <img src="images/logo/fixbuddy-logo.svg" alt="FixBuddy Logo" height="50">
+            </div>
             <h1>FixBuddy</h1>
             <p>Your trusted companion for DIY home repairs</p>
             <div class="search-container">
                 <input type="text" id="search-input" placeholder="Search for repairs..." aria-label="Search repairs">
                 <i class="fas fa-search search-icon"></i>
             </div>
+            <button id="mobile-menu-btn" class="mobile-menu-btn" aria-label="Toggle mobile menu">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
     </header>
 
