feat: redesign logo and header layout

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <header class="header">
         <div class="header-content">
             <div class="logo">
-                <img src="images/logo/fixbuddy-logo.svg" alt="FixBuddy Logo" height="50">
+                <img src="images/logo/fixbuddy-logo.svg" alt="FixBuddy - Your DIY Home Repair Guide" height="60">
             </div>
-            <h1>FixBuddy</h1>
-            <p>Your trusted companion for DIY home repairs</p>
             <div class="search-container">
                 <input type="text" id="search-input" placeholder="Search for repairs..." aria-label="Search repairs">
                 <i class="fas fa-search search-icon"></i>
