--- a/pages/fix-loose-outlet.html
+++ b/pages/fix-loose-outlet.html
@@ -3,207 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fix a Loose Wall Outlet - FixBuddy</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background: linear-gradient(135deg, #f5f7fa 0%, #e4e8eb 100%);
-            min-height: 100vh;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background: #ffffff;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-        }
-        .header {
-            text-align: center;
-            margin-bottom: 30px;
-            padding-bottom: 20px;
-            border-bottom: 2px solid #e8f5e9;
-        }
-        h1 {
-            color: #2E7D32;
-            font-size: 2.2em;
-            margin-bottom: 10px;
-        }
-        h2 {
-            color: #1B5E20;
-            font-size: 1.5em;
-            margin: 25px 0 15px;
-        }
-        .info-box {
-            background: #f8faf9;
-            padding: 20px;
-            border-radius: 8px;
-            margin: 20px 0;
-            border-left: 4px solid #4CAF50;
-        }
-        .tools-list, .steps-list {
-            padding-left: 20px;
-        }
-        .tools-list li, .steps-list li {
-            margin: 10px 0;
-            line-height: 1.6;
-        }
-        .steps-list li {
-            margin-bottom: 20px;
-        }
-        .danger {
-            background: #ffebee;
-            padding: 15px;
-            border-radius: 8px;
-            margin: 20px 0;
-            border-left: 4px solid #f44336;
-        }
-        .danger strong {
-            color: #c62828;
-        }
-        .warning {
-            background: #fff3e0;
-            padding: 15px;
-            border-radius: 8px;
-            margin: 20px 0;
-            border-left: 4px solid #ff9800;
-        }
-        .warning strong {
-            color: #e65100;
-        }
-        .video-container {
-            background: #f8faf9;
-            padding: 20px;
-            border-radius: 8px;
-            margin: 20px 0;
-            text-align: center;
-        }
-        .video-container a {
-            color: #4CAF50;
-            text-decoration: none;
-            font-weight: 500;
-        }
-        .video-container a:hover {
-            text-decoration: underline;
-        }
-        .back-link {
-            display: inline-block;
-            margin-top: 30px;
-            padding: 10px 20px;
-            background: #e8f5e9;
-            border-radius: 8px;
-            color: #4CAF50;
-            text-decoration: none;
-            transition: all 0.3s ease;
-        }
-        .back-link:hover {
-            background: #c8e6c9;
-            transform: translateX(-5px);
-        }
-    </style>
+    <title>Fix a Loose Outlet - FixBuddy</title>
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>Fix a Loose Wall Outlet</h1>
-            <p>Secure loose electrical outlets safely and effectively</p>
+    <header class="header">
+        <div class="header-content">
+            <div class="logo">
+                <a href="../index.html">
+                    <img src="../images/logo/fixbuddy-logo.svg" alt="FixBuddy - Your DIY Home Repair Guide" height="60">
+                </a>
+            </div>
         </div>
+    </header>
 
-        <div class="danger">
-            <strong>⚡ ELECTRICAL SAFETY WARNING:</strong>
-            <ul>
-                <li>ALWAYS turn off power at the circuit breaker before starting</li>
-                <li>Use a voltage tester to confirm power is off</li>
-                <li>If you see burn marks or smell burning, call an electrician immediately</li>
-                <li>Never work on wet or damp electrical components</li>
-            </ul>
-        </div>
+    <main class="container">
+        <article class="repair-guide">
+            <h1><i class="fas fa-plug"></i> How to Fix a Loose Outlet</h1>
+            
+            <section class="intro">
+                <p>A loose electrical outlet can be dangerous and should be fixed promptly. This guide will show you how to safely secure your outlet.</p>
+                <div class="warning-box">
+                    <i class="fas fa-exclamation-triangle"></i>
+                    <strong>Safety Warning:</strong> Always turn off power at the circuit breaker before working on electrical outlets.
+                </div>
+            </section>
 
-        <div class="info-box">
-            <h2>🛠️ Tools Needed</h2>
-            <ul class="tools-list">
-                <li>Flathead and Phillips screwdrivers</li>
-                <li>Voltage tester</li>
-                <li>Outlet shims (if needed)</li>
-                <li>Electrical tape</li>
-                <li>Work gloves</li>
-                <li>Flashlight</li>
-                <li>Outlet spacers (optional)</li>
-                <li>New outlet (if replacement needed)</li>
-            </ul>
-            <p><strong>Estimated Time:</strong> 20-30 minutes</p>
-        </div>
+            <section class="video-tutorial">
+                <h2><i class="fas fa-video"></i> Video Tutorial</h2>
+                <div class="video-container">
+                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/oJRIXK7JTZU" 
+                            title="How to Fix a Loose Electrical Outlet" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                    </iframe>
+                </div>
+                <p class="video-credit">Video by: This Old House</p>
+            </section>
 
-        <div class="warning">
-            <strong>⚠️ Signs of Outlet Problems:</strong>
-            <ul>
-                <li>Loose or wobbly receptacle</li>
-                <li>Plugs fall out easily</li>
-                <li>Sparking when plugging in devices</li>
-                <li>Warm or hot outlet cover</li>
-                <li>Discoloration around outlet</li>
-            </ul>
-        </div>
-
-        <h2>📝 Step-by-Step Instructions</h2>
-        <ol class="steps-list">
-            <li>Safety first:
+            <section class="tools-needed">
+                <h2><i class="fas fa-tools"></i> Tools and Materials</h2>
                 <ul>
-                    <li>Turn off power at breaker</li>
-                    <li>Remove outlet cover plate</li>
-                    <li>Test with voltage tester</li>
+                    <li>Flathead screwdriver</li>
+                    <li>Phillips screwdriver</li>
+                    <li>Voltage tester</li>
+                    <li>Outlet spacers (if needed)</li>
+                    <li>New outlet (if current one is damaged)</li>
                 </ul>
-            </li>
-            <li>Inspect the outlet:
-                <ul>
-                    <li>Check for loose mounting screws</li>
-                    <li>Look for damaged wires</li>
-                    <li>Check box alignment</li>
-                </ul>
-            </li>
-            <li>Tighten mounting screws:
-                <ul>
-                    <li>Don't overtighten</li>
-                    <li>Use outlet shims if needed</li>
-                    <li>Ensure outlet sits flush</li>
-                </ul>
-            </li>
-            <li>Check wiring connections:
-                <ul>
-                    <li>Ensure wire screws are tight</li>
-                    <li>Look for loose wire nuts</li>
-                    <li>Check ground wire connection</li>
-                </ul>
-            </li>
-            <li>Complete the repair:
-                <ul>
-                    <li>Replace cover plate</li>
-                    <li>Turn power back on</li>
-                    <li>Test outlet function</li>
-                </ul>
-            </li>
-        </ol>
+            </section>
 
-        <div class="warning">
-            <strong>⚠️ When to Call an Electrician:</strong>
-            <ul>
-                <li>Outlet is hot to touch</li>
-                <li>Signs of burning or melting</li>
-                <li>Exposed or damaged wires</li>
-                <li>Repeated tripping of breaker</li>
-            </ul>
+            <section class="steps">
+                <h2><i class="fas fa-list-ol"></i> Step-by-Step Guide</h2>
+                <ol>
+                    <li>
+                        <h3>Turn Off Power</h3>
+                        <p>Locate your circuit breaker and turn off power to the outlet. Verify power is off using a voltage tester.</p>
+                    </li>
+                    <li>
+                        <h3>Remove Cover Plate</h3>
+                        <p>Unscrew and remove the outlet cover plate.</p>
+                    </li>
+                    <li>
+                        <h3>Check Mounting Screws</h3>
+                        <p>Tighten the screws holding the outlet to the electrical box.</p>
+                    </li>
+                    <li>
+                        <h3>Add Spacers if Needed</h3>
+                        <p>If the outlet sits too deep, add outlet spacers to bring it flush with the wall.</p>
+                    </li>
+                    <li>
+                        <h3>Check Wiring</h3>
+                        <p>Ensure all wire connections are tight and secure.</p>
+                    </li>
+                    <li>
+                        <h3>Replace Cover</h3>
+                        <p>Reattach the cover plate and ensure it sits flush against the wall.</p>
+                    </li>
+                </ol>
+            </section>
+
+            <section class="tips">
+                <h2><i class="fas fa-lightbulb"></i> Pro Tips</h2>
+                <ul>
+                    <li>Take a photo of the wiring before disconnecting anything</li>
+                    <li>Replace the outlet if it's old or damaged</li>
+                    <li>Consider using a commercial-grade outlet for high-use areas</li>
+                </ul>
+            </section>
+
+            <section class="safety">
+                <h2><i class="fas fa-shield-alt"></i> Safety Notes</h2>
+                <ul>
+                    <li>Always verify power is off with a voltage tester</li>
+                    <li>Don't work on outlets in wet conditions</li>
+                    <li>If you're unsure about anything, consult an electrician</li>
+                    <li>Keep children and pets away from the work area</li>
+                </ul>
+            </section>
+        </article>
+    </main>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <p> 2024 FixBuddy - Your DIY Home Repair Guide</p>
+            <a href="#" class="btn">Back to Top</a>
         </div>
+    </footer>
 
-        <div class="video-container">
-            <h2>📹 Video Tutorial</h2>
-            <p>Watch our detailed video guide on fixing loose wall outlets</p>
-            <a href="#" target="_blank">View Tutorial →</a>
-        </div>
-
-        <a href="electrical-fixes.html" class="back-link">← Back to Electrical Fixes</a>
-    </div>
+    <script src="../js/main.js"></script>
 </body>
 </html>
-
