Added video tutorials to all repair guide pages
Added embedded YouTube videos with:
- Professional repair tutorials
- Safety warnings
- Video credits
- Consistent styling across all pages

--- a/pages/fix-leaky-faucet.html
+++ b/pages/fix-leaky-faucet.html
@@ -102,6 +102,39 @@
             background: #c8e6c9;
             transform: translateX(-5px);
         }
+        .warning-box {
+            background: #fff3e0;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px 0;
+            border-left: 4px solid #ff9800;
+        }
+        .warning-box strong {
+            color: #e65100;
+        }
+        .video-wrapper {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
+            margin: 20px 0;
+        }
+        .video-wrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 8px;
+        }
+        .video-credit {
+            font-style: italic;
+            color: #666;
+            margin-top: 10px;
+        }
+        .warning-box i {
+            color: #ff9800;
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body>
@@ -212,12 +245,20 @@
 
         <div class="video-container">
             <h2>📹 Video Tutorial</h2>
-            <p>Watch our detailed video guide on fixing different types of leaky faucets</p>
-            <a href="#" target="_blank">View Tutorial →</a>
+            <p>Watch our detailed video guide on fixing a leaky faucet</p>
+            <div class="video-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/F5lqBKeWJ8c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <p class="video-credit">Video: "How to Fix a Leaky Faucet - Step by Step Guide"</p>
+            <div class="warning-box">
+                <i class="fas fa-exclamation-triangle"></i>
+                <div>
+                    <strong>Warning:</strong> Always turn off the water supply before starting any faucet repair. Keep track of all parts and their order during disassembly. If you encounter major issues or unusual plumbing configurations, consult a professional plumber.
+                </div>
+            </div>
         </div>
 
         <a href="plumbing-issues.html" class="back-link">← Back to Plumbing Issues</a>
     </div>
 </body>
 </html>
-
