--- a/pages/reattach-chair-legs.html
+++ b/pages/reattach-chair-legs.html
@@ -29,6 +29,39 @@
         h1 {
             color: #4CAF50;
         }
+        .video-wrapper {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
+            margin: 20px 0;
+        }
+        .video-wrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 8px;
+        }
+        .video-credit {
+            font-style: italic;
+            color: #666;
+            margin-top: 10px;
+        }
+        .warning-box {
+            background: #fff3e0;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px 0;
+            border-left: 4px solid #ff9800;
+        }
+        .warning-box i {
+            color: #ff9800;
+            margin-right: 10px;
+        }
+        .warning-box strong {
+            color: #e65100;
+        }
     </style>
 </head>
 <body>
@@ -37,8 +70,21 @@
         <p><strong>Tools Needed:</strong> Wood Glue, Clamps, Screwdriver</p>
         <p><strong>Estimated Time to Fix:</strong> 30-45 minutes (including drying time)</p>
         <p><strong>Video Solution:</strong> <a href="https://www.youtube.com/watch?v=t7yPfeT8Nbw" target="_blank">Watch Here</a></p>
+        <div class="video-container">
+            <h2>📹 Video Tutorial</h2>
+            <p>Watch our detailed video guide on reattaching chair legs</p>
+            <div class="video-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qgAIMVVTV1k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <p class="video-credit">Video: "How to Reattach Chair Legs - Professional Repair Guide"</p>
+            <div class="warning-box">
+                <i class="fas fa-exclamation-triangle"></i>
+                <div>
+                    <strong>Warning:</strong> Allow sufficient drying time for adhesives before using the chair. For chairs with special joinery or antique value, consider professional restoration.
+                </div>
+            </div>
+        </div>
         <a href="furniture-fixes.html">&larr; Back to Furniture Fixes</a>
     </div>
 </body>
 </html>
-
