--- a/pages/fix-wobbly-chair.html
+++ b/pages/fix-wobbly-chair.html
@@ -29,14 +29,54 @@
             <section class="video-tutorial">
                 <h2><i class="fas fa-video"></i> Video Tutorial</h2>
                 <div class="video-container">
-                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/TXqwJNcX8AA" 
-                            title="How to Fix a Wobbly Chair" 
-                            frameborder="0" 
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                            allowfullscreen>
-                    </iframe>
+                    <h2>📹 Video Tutorial</h2>
+                    <p>Watch our detailed video guide on fixing wobbly chairs</p>
+                    <div class="video-wrapper">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Y6VMBkd5wJ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <p class="video-credit">Video: "How to Fix a Wobbly Chair - Easy DIY Repair"</p>
+                    <div class="warning-box">
+                        <i class="fas fa-exclamation-triangle"></i>
+                        <div>
+                            <strong>Warning:</strong> Always work on a stable surface and ensure all joints are completely dry before applying weight. For antique or valuable furniture, consult a professional furniture restorer.
+                        </div>
+                    </div>
                 </div>
-                <p class="video-credit">Video by: Fix This House</p>
+                <style>
+                    .video-wrapper {
+                        position: relative;
+                        padding-bottom: 56.25%; /* 16:9 aspect ratio */
+                        height: 0;
+                        margin: 20px 0;
+                    }
+                    .video-wrapper iframe {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 8px;
+                    }
+                    .video-credit {
+                        font-style: italic;
+                        color: #666;
+                        margin-top: 10px;
+                    }
+                    .warning-box {
+                        background: #fff3e0;
+                        padding: 15px;
+                        border-radius: 8px;
+                        margin: 20px 0;
+                        border-left: 4px solid #ff9800;
+                    }
+                    .warning-box i {
+                        color: #ff9800;
+                        margin-right: 10px;
+                    }
+                    .warning-box strong {
+                        color: #e65100;
+                    }
+                </style>
             </section>
 
             <section class="tools-needed">
