--- a/pages/repair-tile-grout.html
+++ b/pages/repair-tile-grout.html
@@ -102,6 +102,39 @@
             background: #c8e6c9;
             transform: translateX(-5px);
         }
+        .video-wrapper {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
+            margin: 20px 0;
+        }
+        .video-wrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 8px;
+        }
+        .video-credit {
+            font-style: italic;
+            color: #666;
+            margin-top: 10px;
+        }
+        .warning-box {
+            background: #fff3e0;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px 0;
+            border-left: 4px solid #ff9800;
+        }
+        .warning-box i {
+            color: #ff9800;
+            margin-right: 10px;
+        }
+        .warning-box strong {
+            color: #e65100;
+        }
     </style>
 </head>
 <body>
@@ -185,12 +218,20 @@
 
         <div class="video-container">
             <h2>📹 Video Tutorial</h2>
-            <p>Watch our detailed video guide on repairing and sealing tile grout</p>
-            <a href="#" target="_blank">View Tutorial →</a>
+            <p>Watch our detailed video guide on repairing tile grout</p>
+            <div class="video-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ECw2ic9j1xw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <p class="video-credit">Video: "How to Repair and Replace Tile Grout - Professional Tips"</p>
+            <div class="warning-box">
+                <i class="fas fa-exclamation-triangle"></i>
+                <div>
+                    <strong>Warning:</strong> Ensure proper ventilation when working with grout and sealers. Wear a dust mask when removing old grout. Allow proper curing time before exposing to water or heavy traffic.
+                </div>
+            </div>
         </div>
 
         <a href="flooring-problems.html" class="back-link">← Back to Flooring Problems</a>
     </div>
 </body>
 </html>
-
