--- a/pages/replace-bulb.html
+++ b/pages/replace-bulb.html
@@ -109,6 +109,39 @@
             background: #c8e6c9;
             transform: translateX(-5px);
         }
+        .video-wrapper {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
+            margin: 20px 0;
+        }
+        .video-wrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 8px;
+        }
+        .video-credit {
+            font-style: italic;
+            color: #666;
+            margin-top: 10px;
+        }
+        .warning-box {
+            background: #fff3e0;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px 0;
+            border-left: 4px solid #ff9800;
+        }
+        .warning-box i {
+            color: #ff9800;
+            margin-right: 10px;
+        }
+        .warning-box strong {
+            color: #e65100;
+        }
     </style>
 </head>
 <body>
@@ -199,6 +232,21 @@
             </ul>
         </div>
 
+        <div class="video-container">
+            <h2>📹 Video Tutorial</h2>
+            <p>Watch our detailed video guide on safely replacing different types of light bulbs</p>
+            <div class="video-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/WwbpBwRYHJ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <p class="video-credit">Video: "How to Replace Any Light Bulb - Complete Guide"</p>
+            <div class="warning-box">
+                <i class="fas fa-exclamation-triangle"></i>
+                <div>
+                    <strong>Warning:</strong> Always ensure the light switch is off and the bulb is completely cool before handling. Use a sturdy ladder or step stool when reaching high fixtures. If a bulb breaks, ventilate the area and follow proper cleanup procedures to avoid injury from glass shards.
+                </div>
+            </div>
+        </div>
+
         <div class="warning">
             <strong>⚠️ Troubleshooting:</strong>
             <p>If new bulb doesn't work:
@@ -211,14 +259,7 @@
             </p>
         </div>
 
-        <div class="video-container">
-            <h2>📹 Video Tutorial</h2>
-            <p>Watch our detailed video guide on replacing different types of light bulbs</p>
-            <a href="#" target="_blank">View Tutorial →</a>
-        </div>
-
         <a href="electrical-fixes.html" class="back-link">← Back to Electrical Fixes</a>
     </div>
 </body>
 </html>
-
