--- a/pages/unclog-drain.html
+++ b/pages/unclog-drain.html
@@ -112,6 +112,39 @@
             background: #c8e6c9;
             transform: translateX(-5px);
         }
+        .video-wrapper {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
+            margin: 20px 0;
+        }
+        .video-wrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 8px;
+        }
+        .video-credit {
+            font-style: italic;
+            color: #666;
+            margin-top: 10px;
+        }
+        .warning-box {
+            background: #fff3e0;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px 0;
+            border-left: 4px solid #ff9800;
+        }
+        .warning-box i {
+            color: #ff9800;
+            margin-right: 10px;
+        }
+        .warning-box strong {
+            color: #e65100;
+        }
     </style>
 </head>
 <body>
@@ -218,12 +251,20 @@
 
         <div class="video-container">
             <h2>📹 Video Tutorial</h2>
-            <p>Watch our detailed video guide on unclogging different types of drains</p>
-            <a href="#" target="_blank">View Tutorial →</a>
+            <p>Watch our detailed video guide on unclogging drains safely and effectively</p>
+            <div class="video-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/JWZklniOo_4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <p class="video-credit">Video: "How to Unclog Any Drain - Professional Plumber Tips"</p>
+            <div class="warning-box">
+                <i class="fas fa-exclamation-triangle"></i>
+                <div>
+                    <strong>Warning:</strong> Never mix different drain cleaners as this can create dangerous chemical reactions. Wear protective gloves and eye protection when using chemical cleaners. Ensure proper ventilation and if the clog persists or you suspect a serious blockage, contact a professional plumber.
+                </div>
+            </div>
         </div>
 
         <a href="plumbing-issues.html" class="back-link">← Back to Plumbing Issues</a>
     </div>
 </body>
 </html>
-
