Enhanced category cards with maintenance tips
- Added maintenance tips and important information to each category
- Updated styling for maintenance tips lists
- Improved category card layout and hover effects
- Changed 'View Guides' to 'Repair Guides' for clarity

--- a/index.html
+++ b/index.html
@@ -120,8 +120,13 @@
                         <i class="fas fa-wrench"></i>
                     </div>
                     <h3>Plumbing</h3>
-                    <p>Fix common plumbing issues like leaky faucets, clogged drains, and running toilets.</p>
-                    <a href="pages/plumbing/leaky-faucet.html" class="btn">View Guides</a>
+                    <p>Regular maintenance can prevent costly repairs:</p>
+                    <ul class="maintenance-tips">
+                        <li><i class="fas fa-check"></i> Check for leaks monthly</li>
+                        <li><i class="fas fa-check"></i> Clean drains regularly</li>
+                        <li><i class="fas fa-check"></i> Monitor water pressure</li>
+                    </ul>
+                    <a href="pages/plumbing/leaky-faucet.html" class="btn">Repair Guides</a>
                 </div>
 
                 <!-- Electrical Category -->
@@ -130,8 +135,13 @@
                         <i class="fas fa-plug"></i>
                     </div>
                     <h3>Electrical</h3>
-                    <p>Safely repair light switches, outlets, and other electrical problems.</p>
-                    <a href="pages/electrical/light-switch.html" class="btn">View Guides</a>
+                    <p>Important safety reminders:</p>
+                    <ul class="maintenance-tips">
+                        <li><i class="fas fa-exclamation-triangle"></i> Always turn off power first</li>
+                        <li><i class="fas fa-check"></i> Test outlets monthly</li>
+                        <li><i class="fas fa-check"></i> Check for warm outlets/switches</li>
+                    </ul>
+                    <a href="pages/electrical/light-switch.html" class="btn">Repair Guides</a>
                 </div>
 
                 <!-- Furniture Category -->
@@ -140,8 +150,13 @@
                         <i class="fas fa-couch"></i>
                     </div>
                     <h3>Furniture</h3>
-                    <p>Fix wobbly chairs, stuck drawers, and other furniture issues.</p>
-                    <a href="pages/furniture/wobbly-table.html" class="btn">View Guides</a>
+                    <p>Preventive care tips:</p>
+                    <ul class="maintenance-tips">
+                        <li><i class="fas fa-check"></i> Tighten screws quarterly</li>
+                        <li><i class="fas fa-check"></i> Clean upholstery regularly</li>
+                        <li><i class="fas fa-check"></i> Rotate cushions monthly</li>
+                    </ul>
+                    <a href="pages/furniture/wobbly-table.html" class="btn">Repair Guides</a>
                 </div>
 
                 <!-- Doors & Windows Category -->
@@ -150,8 +165,13 @@
                         <i class="fas fa-door-open"></i>
                     </div>
                     <h3>Doors & Windows</h3>
-                    <p>Repair squeaky hinges, stuck windows, and door lock problems.</p>
-                    <a href="pages/doors/squeaky-hinge.html" class="btn">View Guides</a>
+                    <p>Regular maintenance checklist:</p>
+                    <ul class="maintenance-tips">
+                        <li><i class="fas fa-check"></i> Lubricate hinges every 6 months</li>
+                        <li><i class="fas fa-check"></i> Check weatherstripping</li>
+                        <li><i class="fas fa-check"></i> Clean window tracks</li>
+                    </ul>
+                    <a href="pages/doors/squeaky-hinge.html" class="btn">Repair Guides</a>
                 </div>
 
                 <!-- Appliances Category -->
@@ -160,8 +180,13 @@
                         <i class="fas fa-tools"></i>
                     </div>
                     <h3>Appliances</h3>
-                    <p>Troubleshoot and fix common appliance problems.</p>
-                    <a href="pages/appliances/washer-repair.html" class="btn">View Guides</a>
+                    <p>Essential maintenance tasks:</p>
+                    <ul class="maintenance-tips">
+                        <li><i class="fas fa-check"></i> Clean filters monthly</li>
+                        <li><i class="fas fa-check"></i> Check hoses for leaks</li>
+                        <li><i class="fas fa-check"></i> Clear vents regularly</li>
+                    </ul>
+                    <a href="pages/appliances/washer-repair.html" class="btn">Repair Guides</a>
                 </div>
 
                 <!-- Flooring Category -->
@@ -170,8 +195,13 @@
                         <i class="fas fa-layer-group"></i>
                     </div>
                     <h3>Flooring</h3>
-                    <p>Fix squeaky floors, loose tiles, and carpet issues.</p>
-                    <a href="pages/flooring/general-repairs.html" class="btn">View Guides</a>
+                    <p>Care and maintenance tips:</p>
+                    <ul class="maintenance-tips">
+                        <li><i class="fas fa-check"></i> Clean spills immediately</li>
+                        <li><i class="fas fa-check"></i> Use proper cleaning products</li>
+                        <li><i class="fas fa-check"></i> Inspect grout lines regularly</li>
+                    </ul>
+                    <a href="pages/flooring/general-repairs.html" class="btn">Repair Guides</a>
                 </div>
             </div>
         </section>
